2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/26_convOptoFloat.deca
// Description:
//    Programme : conv une operation
// Resultats:
//      Programme correcte syntaxiquement 
//
// Historique:
//    cree le 18/01/2024
{
    float y = (float)(3*5)/2;
}